syntax = "proto3";

package api.panshee.v1.proto;

import "google/api/field_behavior.proto";

option java_package = "api.panshee.v1.proto";
option java_multiple_files = true;
option java_outer_classname = "UserPasswordProto";

option go_package = ".;pb";

// Request for addinf password to database with specific user
message CreateUserPasswordRequest{
    // id of the user
    string user_id = 1 [(google.api.field_behavior) = REQUIRED];
    // password of the user
    string password = 2 [(google.api.field_behavior) = REQUIRED];
}

// Request to update user's password
message UpdateUserPasswordRequest{
    // id of the user
    string user_id = 1 [(google.api.field_behavior) = REQUIRED];
    // password of the user
    string password = 2 [(google.api.field_behavior) = REQUIRED];
}

// Request to validate a password with specific user
message ValidateUserPasswordRequest{
    // id of the user
    string user_id = 1 [(google.api.field_behavior) = REQUIRED];
    // password of the user
    string password = 2 [(google.api.field_behavior) = REQUIRED];
}

// response of the validation
message ValidateUserPasswordResponse{
    // true - password is correct
    // false - password is incorrect
    bool validated = 1;
}
